--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,18 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.servlet</groupId>
+            <artifactId>weld-servlet</artifactId>
+            <version>2.0.0.Final</version>
+            <scope>runtime</scope>
+        </dependency>
         <!-- Spring -->
         <dependency>
             <groupId>commons-fileupload</groupId>
